--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 certifi==2020.12.5
 chardet==4.0.0
-grakn-client==2.0.1
-grakn-protocol==2.0.1
-graknprotocol==2.0.0a5
-grpcio==1.36.1
+typedb-client==2.2.0
+typedb-protocol==2.2.0
 idna==2.10
 numpy==1.20.1
 pandas==1.2.2
-protobuf==3.15.5
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
