Fix testing action

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,11 +33,12 @@ jobs:
           source env/bin/activate
           echo "VIRTUAL ENV:" "$VIRTUAL_ENV"
           pip install -r requirements_test.txt
-          # force reinstall the version of the upstream caller repository
       - name: Run tests
         run: |
           source env/bin/activate
-          typedb server & python -m pytest --junitxml=pytest.xml --cov-report=term-missing --cov=./ tests/ > pytest-coverage.txt
+          typedb server &
+          sleep 10
+          python -m pytest --junitxml=pytest.xml --cov-report=term-missing --cov=./ tests/ > pytest-coverage.txt
       - name: Comment test coverage
         uses: MishaKav/pytest-coverage-comment@main
         with:
