Fix testing action

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,13 +37,8 @@ jobs:
         run: |
           source env/bin/activate
           typedb server &
-          sleep 10
-          python -m pytest -v -s tests --junitxml=pytest.xml --cov-report=term-missing --cov=./ > pytest-coverage.txt
-      - name: Comment test coverage
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-coverage-path: pytest-coverage.txt
-          junitxml-path: pytest.xml
+          sleep 5
+          python -m pytest -v -s tests
       - name: Clean virtual environment
         run: |
           rm -r env
