--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,12 @@
-# Mac
-.DS_Store
+# Intellij directory
+.idea
 
-# Bazel
-bazel-*
+# VS Code directory
+.vscode
 
-# IDE
-.idea/
-*.iml
-*.ipr
-*.iws
-*.geany
-.ijwb/
-
-# VS Code
-.vscode/
-.settings/
-.project
-.classpath
-
-# Compiled
-data/
-dist/
-out/
-*.class
-
-# Package
-*.jarg
-*.war
-*.ear
-
-# Gradle
-.gradle/
-
-# Debug
-dep.tree
-
-# Databases
-db/
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml #
-hs_err_pid*
-
-# Log
-logs/
-*.log
-
-# VIM swap
-*.swp
-*.swo
-
-# Python cache
 __pycache__
-**/__pycache__
-__pycache__/
-**.pyc
-*.pyc
+
+# Datasets
+.cache
+Dataset/CORD_NER
+Dataset/TissueNet
