--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-certifi==2020.12.5
-chardet==4.0.0
 typedb-client==2.14.3
-idna==2.10
-numpy==1.24.2
-pandas==1.2.2
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
-six==1.15.0
-tqdm==4.56.1
-untangle==1.1.1
-urllib3==1.26.5
+pandas==1.5.3
+joblib==1.2.0
+requests==2.28.2
+tqdm==4.65.0
+grpcio==1.51.3
 wget==3.2
