Replaced references to TypeDB Cluster.

--- a/config.ini
+++ b/config.ini
@@ -4,11 +4,11 @@ database = typedb-bio
 address = localhost:1729
 ; Server address and port.
 server_type = CORE
-; TypeDB server product in use, "CORE" or "CLUSTER".
+; TypeDB server product in use, "CORE", "ENTERPRISE", or "CLOUD".
 username = user
-; Username for TypeDB Cluster.
+; Username for TypeDB Enterprise and Cloud.
 tls_cert_path = path/to/tls/cert
-; TLS certificate path for TypeDB Cluster.
+; TLS certificate path for TypeDB Enterprise and Cloud.
 
 [parsing]
 ; Leave an argument blank to parse all entries.
